# arrow-w-inverted-index

./: .gitignore  Cargo.toml  README.md
src/: main.rs
