[package]
name = "arrow_implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "55.0.0"
parquet = "55.0.0"
memmap2 = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
log = "0.4.20"
env_logger = "0.10.0"
sysinfo = "0.29.10"
thiserror = "1.0.50"
tikv-jemallocator = { version = "0.5", optional = true } # Optional: For potential memory improvements/profiling

[features]
default = ["enable_jemalloc"]
enable_jemalloc = ["dep:tikv-jemallocator"]